# geogdal

./: .gitignore  pyproject.toml
src/geogdal/: __init__.py  common.py  geogdal.py
