[project]
name = "geogdal"
version = "0.1.0"
description = "A small module to simplify common geospatial data operations using GDAL."
authors = [
    {name = "tuyenrss",email = "tuyenmassey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "geogdal", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
